--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "github-frontend",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "homepage": "https://github.com/lexm/github-frontend#readme",
+  "bugs": {
+    "url": "https://github.com/lexm/github-frontend/issues"
   },
+  "license": "ISC",
+  "author": "Lex Myers",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lexm/github-frontend.git"
   },
-  "author": "Lex Myers",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lexm/github-frontend/issues"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/lexm/github-frontend#readme"
+  "dependencies": {
+    "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-webpack": "^1.5.0",
+    "webpack-stream": "^3.1.0"
+  }
 }
