now that I've exceeded the GH use limit for the hour, I might as well commit my code

--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "express-request-proxy": "^2.0.0"
   },
   "devDependencies": {
     "bower": "^1.7.9",
+    "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-webpack": "^1.5.0",
+    "style-loader": "^0.13.1",
     "webpack-stream": "^3.1.0"
   }
 }
